# nnaf-utils

./: .gitignore  README.md  pyproject.toml  test.py
src/nnaf_utils/: __init__.py  encoding.py  filesystem.py  miscs.py  parallel.py  pytype.py  pytypes.py
